Fixed loader spacing

--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -15,7 +15,7 @@
 
 .loader {
     @include size(15px);
-    margin: 15px auto;
+    margin: 26px auto;
     background-color: #333;
     color: #777;
     border-radius: 100%;
